--- a/tei_2021_motivation.html
+++ b/tei_2021_motivation.html
@@ -190,7 +190,7 @@ Thank you!</p>
 <div class="figure">
 <div>
 <img style="height:220px;" src="tei_2021_motivation_files/hand_puppet_robot.gif" alt="hand_puppet_robot.gif"> 
-<span>Figure 2: <a href="https://www.zotero.org/google-docs/?UccmXc">Jwu-Sheng Hu et al</a>: <a href="https://ieeexplore.ieee.org/document/4651190">X-puppet</a>.</span>
+<span>Figure 2: Jwu-Sheng Hu et al: <a href="https://ieeexplore.ieee.org/document/4651190">X-puppet</a>.</span>
 </div>
 <div>
 <img style="height:220px;" src="tei_2021_motivation_files/puppet_experiment.gif" alt="puppet_experiment.gif"> <span>Figure 3: My first telerobot puppet experient.</span></p>
